# wg-gateway

./: .editorconfig  .envrc  .gitignore  .mypy.ini  .pre-commit-config.yaml  Brewfile  CODEOWNERS  Containerfile  Containerfile.ddbadmin  LICENSE  README.md  bandit.yaml  container-compose.yaml  pyproject.toml
.github/workflows/: audit.yaml
tests/: dummy_test.py
tests/unit/: dummy_test.py
tests/unit/lib/: exe_test.py
tests/unit/wg_gateway/: __init___test.py
wg_gateway/: __init__.py  __main__.py  app.py  entrypoint.py
wg_gateway/api/: __init__.py  app.py  cli_command.py
wg_gateway/cli/: __init__.py  cli_command.py
wg_gateway/cli/db/: __init__.py  bootstrap.py  cli_command.py
wg_gateway/db/: __init__.py  config.py  database.py
wg_gateway/db/dynamodb/: __init__.py
wg_gateway/lib/: exe.py
wg_gateway/ui/: __init__.py
