[tool.poetry]
name = "wg-gateway"
version = "0.0.1"
description = "A \"gateway\" (UI/API) for Wireguard written in Python"
authors = ["Jackson Porter <jackson@jacksonporterjp.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wg_gateway" }]
homepage = "https://github.com/jacksonporter/wg-gateway"
repository = "https://github.com/jacksonporter/wg-gateway"
documentation = "https://github.com/jacksonporter/wg-gateway"
keywords = [
    "wiregaurd",
    "ui",
    "web",
    "cli",
    "api",
    "networking",
    "linux",
    "unix",
    "wg",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.12.1"
click = "^8.1.7"

[tool.poetry.group.ui.dependencies]
nicegui = "^1.4.13"

[tool.poetry.group.api.dependencies]
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"

[tool.poetry.group.cli.dependencies]
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
setuptools = "^69.0.3"

[tool.poetry.scripts]
wg-gateway = 'wg_gateway.entrypoint:main'
wg-gateway-cli = 'wg_gateway.entrypoint:main'
wgc = 'wg_gateway.entrypoint:main'
wg-gateway-api = 'wg_gateway.entrypoint:main'
wga = 'wg_gateway.entrypoint:main'
wg-gateway-ui = 'wg_gateway.entrypoint:main'
wgu = 'wg_gateway.entrypoint:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
